# llmzoomcampHW

./: main.py  pyproject.toml
llm-zoomcamp-hw1/: Homework.ipynb  README.md  pyproject.toml
llm-zoomcamp-hw2/: pyproject.toml
