[project]
name = "llm-zoomcamp-hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitsource>=0.0.5",
    "minsearch>=0.1.1",
    "numpy>=2.2.6",
    "onnxruntime>=1.24.3",
    "tokenizers>=0.23.1",
    "tqdm>=4.68.3",
]
